# Muicebot-Plugin-Status

./: LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: build_css.yaml  pre-commit.yml
muicebot_plugin_status/: __init__.py  config.py  info.py
muicebot_plugin_status/static/css/: output.css
muicebot_plugin_status/template/: index.html.jinja
