[tool.poetry]
name = "muicebot-plugin-status"
version = "0.1.0"
description = "基于 nonebot_plugin_htmlrender 的 Muicebot 状态插件"
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "muicebot>=0.3.1",
    "nonebot2>=2.4.1",
    "nonebot_plugin_alconna>=0.54.2",
    "nonebot-plugin-htmlrender>=0.6.5",
    "psutil>=7.0.0",
    "pydantic>=2.10.5",
    "py-cpuinfo>=9.0.0",
]
authors = [
    { name = "Moemu", email = "i@snowy.moe" },
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"