[project]
name = "muicebot-plugin-status"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "muicebot>=1.0.0",
    "nonebot2>=2.4.1",
    "nonebot_plugin_alconna>=0.54.2",
    "nonebot-plugin-htmlrender>=0.6.5",
    "nonebot_plugin_orm>=0.7.7",
    "psutil>=7.0.0",
    "pydantic>=2.10.5",
    "py-cpuinfo>=9.0.0",
]
authors = [
    { name = "Moemu", email = "i@snowy.moe" },
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"