[project]
name = "muicebot-plugin-status"
description = "基于 nonebot_plugin_htmlrender 的 Muicebot 状态插件"
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "jinja2>=3.1.6",
    "muicebot>=1.0.0",
    "nonebot2>=2.4.1",
    "nonebot_plugin_alconna>=0.54.2",
    "nonebot-plugin-htmlrender>=0.6.5",
    "nonebot_plugin_orm>=0.7.7",
    "psutil>=7.0.0",
    "pydantic>=2.10.5",
    "py-cpuinfo>=9.0.0",
]
authors = [
    { name = "Moemu", email = "i@snowy.moe" },
]

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
fallback_version = "0.2.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"